# lenia

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Pulsar.mov  README.md
.github/workflows/: docs.yaml
patterns/: 01439e6a-63fc-415c-91af-19d6f1dec0e4.lenia  09aea92d-e7b1-40e1-8d2f-5490feb717a0.lenia  13c787db-82b0-4c3d-9007-12c24cf74fc2.lenia  144f48a1-fa78-4af6-a432-0b72c7733f05.lenia  2673baaa-0393-4540-90e3-05699881a02c.lenia  3709077d-4939-495e-8faa-a986a320afcb.lenia  43e46f2c-3910-4878-a952-1059d53fc979.lenia  768f444e-f67f-40c6-8564-975e38705b2d.lenia  780b5735-3304-4cc0-a822-10e8d3b38d4f.lenia  885a6c64-d202-453c-9223-548288fbf276.lenia  93c6b1c7-8883-4a63-9cee-efcea0b56709.lenia  ac9fa4c1-7660-4c84-a3c0-a679bd6211f4.lenia  b0833638-6b8e-4115-b489-fbcd8fa0e87d.lenia  c2e3cee1-531f-42f1-917f-06432cb78a1f.lenia  caa86d75-a0a8-40eb-83d5-febd3796d024.lenia  fba8d815-b986-46ca-8294-50b880989596.lenia  fee021c9-d1ae-458c-8bdf-b73a88da7a2d.lenia  test.txt
src/: gol.rs  main.rs
