[package]
name = "lenia"
version = "0.1.0"
edition = "2021"
authors = ["Jack Mitcheltree", "Ian Wineman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.2"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
piston2d-graphics = "0.43.0"
regex = "1.8.4"
rand = "0.8.5"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
